# matrix

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: matrix.h
src/: matrix.c
test/: test_matrix.c
